feat: add svelte plugin

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -26,5 +26,6 @@
     // 启用诊断信息
     "diagnostic.enable": true,
     // 禁用 clangd 的诊断信息
-    "clangd.disableDiagnostics": true
+    "clangd.disableDiagnostics": true,
+    "svelte.enable-ts-plugin": true
 }
