--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,12 @@
 {
     "python.pythonPath": "~/.pyenv/shims/python3",
     "rust-analyzer.server.path": "~/.cargo/bin/rust-analyzer",
+    "rust-analyzer.experimental.procAttrMacros": true,
+    "rust-analyzer.cargo.autoreload": true,
+    "rust-analyzer.cargo.allFeatures": true,
+    "rust-analyzer.cargo.runBuildScripts": true,
+    "rust-analyzer.procMacro.enable": true,
+    "rust-analyzer.checkOnSave.enable": true,
     "languageserver": {
         "ccls": {
             "command": "ccls",
