--- a/coc-settings.json
+++ b/coc-settings.json
@@ -7,6 +7,7 @@
     "rust-analyzer.cargo.runBuildScripts": true,
     "rust-analyzer.procMacro.enable": true,
     "rust-analyzer.checkOnSave.enable": true,
+    "rust-analyzer.diagnostics.disabled": ["unresolved-import"],
     "languageserver": {
         "ccls": {
             "command": "ccls",
