feat: remove unused plugins

--- a/nerdtree.conf
+++ b/nerdtree.conf
@@ -1,46 +1,3 @@
-function! DocNerdtree()
-python3 << EOF
-DOCS = '''
-# Nerdtree 文档
-
-首先定位工作目录 (.git 所在目录或者 .vimroot 所在目录), 然后读取 .vimignore 文件,
-忽略其中指定的项.
-
-原本读取的是 .gitignore 文件, 但是 .gitignore 的正则语法比较负责, 在 nerdtree 中难以处理,
-因此变换为通过 .vimignore 手动指定要忽略的文件.
-
-.vimignore 的空行将会被忽略, 若某行的第一个非空白字符为 #, 则该行为注释行.
-
-.vimignore 中的每一行表示要忽略的项, 项的名称有如下约束:
-
-- 不能包含 ~ 字符, 因为 ~ 会导致nerdtree NFA could not pop the stack 错误
-
-- 不支持直接路径匹配
-
-    即类似于 src/3rd 的写法是不起作用的.
-
-- 模式匹配
-
-    比如你要忽略一个叫做 core 的文件, 可以在 .vimignore 里面写一行内容为 core,
-    如果把 core 读取传递给 nerdtree, 那么 nerdtree 会把任何以 core 结尾的文件或者目录忽略掉,
-    如果要精确匹配 core 文件, 需要写作 ^core$.
-
-    nerdtree 支持额外的 flag: [[dir]], [[file]], [[path]]. 分别用于指定目录, 文件, 路径, 比如
-
-        ^build$[[dir]]
-        .d$[[dir]]
-        .o$[[file]]
-        tmp/cache$[[path]]
-
-    模式匹配中不需要用 * 进行通配符匹配, 即 .o 就对应于任何后缀为 .o 的文件, 不需要写作 *.o.
-
-'''
-print(DOCS)
-EOF
-endfunction
-
-Plug 'scrooloose/nerdtree'
-
 function! GetIgnores()
 
 " 获取 g:VimRoot 变量
@@ -108,8 +65,8 @@ for item in g:VimIgnoresRaw
 endfor
 endfunction
 
-call GetIgnores()
-let NERDTreeIgnore = g:VimIgnores
+" call GetIgnores()
+" let NERDTreeIgnore = g:VimIgnores
 
 " 让 nerdtree 忽略常见的临时文件
 set wildignore+=*.pyc,*.o,*.obj,*.svn,*.swp,*.class,*.hg,*.DS_Store,*.min.*,*__pycache__*,*.db,*.xcodeproj
